preparing for cool actions

--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -11,73 +11,73 @@
 						<th>From</th>
 						<th>To</th>
 					</tr>
-					<tr onclick="showCard()">
-						<td>90</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Maly pr. VO</td>
 						<td>Nevsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>90</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Maly pr. VO</td>
 						<td>Nevsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>190</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>190</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>190</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>190</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>190</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Bolshoy pr. VO</td>
 						<td>Sampsonievsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>300</td>
+					<tr>
+						<td onclick="showCard()">90</td>
 						<td>Devyatkino</td>
 						<td>Kupchino</td>
 					</tr>
