--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -10,80 +10,50 @@
 			<div class="table-wrapper">
 			<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
 				<table>
-					<tr onclick="showCard()">
+					<tr>
+						<th>Name</th>
 						<th>Number<i class="material-icons">arrow_drop_up</i></th>
 						<th>Route</th>
-						<th>Name</th>
 					</tr>
-					<tr onclick="showCard()">
-						<td>45</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>01</td>
-						<td>Nevsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>46</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>02</td>
-						<td>Maly pr. VO</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>46</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>03</td>
-						<td>Bolshoy pr. VO</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>48</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>04</td>
-						<td>Sampsonievsky pr.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>49</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>05</td>
-						<td>Kupchino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>50</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>06</td>
-						<td>Devyatkino</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>51</td>
+					<tr>
+						<td onclick="showCard()">Nahimova str.</td>
+						<td onclick="showCard()">51</td>
 						<td>07</td>
-						<td>Nahimova str.</td>
 					</tr>
-					<tr onclick="showCard()">
-						<td>45</td>
+					<tr>
+						<td onclick="showCard()">Nevsky pr.</td>
+						<td onclick="showCard()">45</td>
 						<td>01</td>
-						<td>Nevsky pr.</td>
-					</tr>
-					<tr onclick="showCard()">
-						<td>46</td>
-						<td>02</td>
-						<td>Maly pr. VO</td>
-					</tr>
-					<tr onclick="showCard()">
-						<td>46</td>
-						<td>03</td>
-						<td>Bolshoy pr. VO</td>
-					</tr>
-					<tr onclick="showCard()">
-						<td>48</td>
-						<td>04</td>
-						<td>Sampsonievsky pr.</td>
-					</tr>
-					<tr onclick="showCard()">
-						<td>49</td>
-						<td>05</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr onclick="showCard()">
-						<td>50</td>
-						<td>06</td>
-						<td>Devyatkino</td>
-					</tr>
-					<tr onclick="showCard()">
-						<td>51</td>
-						<td>07</td>
-						<td>Nahimova str.</td>
 					</tr>
 				</table>
 			</div>
