--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -25,7 +25,7 @@
 				</div>
 				<div class="login" onclick="toggleLoginMenu()">
 					<a href="#">
-						<i class="material-icons login-pic">exit_to_app</i>
+						<i class="material-icons login-pic">lock_open</i>
 					</a>
 				</div>
 				<div class="find-pic" onclick="toggleMobileSearch()">
