--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -27,67 +27,67 @@
 						<th>Seats <i class="material-icons">arrow_drop_up</i></th>
 					<tr>
 						<td><i class="material-icons">directions_bus</i></td>
+						<td onclick="showCard()">B011US</td>
 						<td>90</td>
-						<td>01</td>
 						<td>48</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">directions_bus</i></td>
-						<td>90</td>
+						<td onclick="showCard()">B011US</td>
 						<td>02</td>
 						<td>48</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td onclick="showCard()">B011US</td>
 						<td>03</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td onclick="showCard()">B011US</td>
 						<td>04</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td onclick="showCard()">B011US</td>
 						<td>05</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td onclick="showCard()">B011US</td>
 						<td>06</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">train</i></td>
-						<td>190</td>
+						<td onclick="showCard()">B011US</td>
 						<td>07</td>
 						<td>120</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td onclick="showCard()">B011US</td>
 						<td>08</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td onclick="showCard()">B011US</td>
 						<td>09</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td onclick="showCard()">B011US</td>
 						<td>10</td>
 						<td>133</td>
 					</tr>
 					<tr>
 						<td><i class="material-icons">tram</i></td>
-						<td>300</td>
+						<td onclick="showCard()">B011US</td>
 						<td>11</td>
 						<td>133</td>
 					</tr>
