transport table now is generating from JSON!

--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -19,77 +19,12 @@
 			</div>
 			<div class="table-wrapper">
 				<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
-				<table>				
+				<table id="transport-table">				
 					<tr>
 						<th>Type</th>
 						<th>Number</th>
 						<th>Route</th>
 						<th>Seats <i class="material-icons">arrow_drop_up</i></th>
-					<tr>
-						<td><i class="material-icons">directions_bus</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>90</td>
-						<td>48</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">directions_bus</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>02</td>
-						<td>48</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">train</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>03</td>
-						<td>120</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">train</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>04</td>
-						<td>120</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">train</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>05</td>
-						<td>120</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">train</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>06</td>
-						<td>120</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">train</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>07</td>
-						<td>120</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">tram</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>08</td>
-						<td>133</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">tram</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>09</td>
-						<td>133</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">tram</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>10</td>
-						<td>133</td>
-					</tr>
-					<tr>
-						<td><i class="material-icons">tram</i></td>
-						<td onclick="showCard()">B011US</td>
-						<td>11</td>
-						<td>133</td>
 					</tr>
 				</table>
 			</div>
