stops table generator is complete!

--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -9,51 +9,11 @@
 			</div>
 			<div class="table-wrapper">
 			<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
-				<table>
+				<table id="stops-table">
 					<tr>
 						<th>Name</th>
 						<th>Number<i class="material-icons">arrow_drop_up</i></th>
-						<th>Route</th>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>01</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>02</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>03</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>04</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>05</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>06</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nahimova str.</td>
-						<td onclick="showCard()">51</td>
-						<td>07</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">Nevsky pr.</td>
-						<td onclick="showCard()">45</td>
-						<td>01</td>
+						<th>Routes</th>
 					</tr>
 				</table>
 			</div>
