there are difficulties with routes table but anyway... gonna sleep

--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -5,81 +5,11 @@
 			<h2>Routes</h2>
 			<div class="table-wrapper">
 				<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
-				<table>
+				<table id="routes-table">
 					<tr>
-						<th>Route number</th>
+						<th>Route name</th>
 						<th>From</th>
 						<th>To</th>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Maly pr. VO</td>
-						<td>Nevsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Maly pr. VO</td>
-						<td>Nevsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Bolshoy pr. VO</td>
-						<td>Sampsonievsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Bolshoy pr. VO</td>
-						<td>Sampsonievsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Bolshoy pr. VO</td>
-						<td>Sampsonievsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Bolshoy pr. VO</td>
-						<td>Sampsonievsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Bolshoy pr. VO</td>
-						<td>Sampsonievsky pr.</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
-					</tr>
-					<tr>
-						<td onclick="showCard()">90</td>
-						<td>Devyatkino</td>
-						<td>Kupchino</td>
 					</tr>
 				</table>
 			</div>
