--- a/dev-server/app/templates/partials/html/route_filtering_menu.hbs
+++ b/dev-server/app/templates/partials/html/route_filtering_menu.hbs
@@ -10,37 +10,57 @@
 			value: "all",
 		},
 		{
-			label: "Maly pr VO",
+			label: "AB01",
 			value: "mal",
 		},
 		{
-			label: "Bolshoy pr",
+			label: "AB02",
 			value: "bol",
 		},
 		{
-			label: "Nevsky pr",
+			label: "AB03",
 			value: "ne",
 		},
 		{
-			label: "Sredny pr",
+			label: "AB06",
 			value: "sr",
 		},
 		{
-			label: "Ligovsky pr",
+			label: "TL07",
 			value: "lig",
 		},
 		{
-			label: "Liteiny pr",
+			label: "TL09",
 			value: "lit",
 		},
 		{
-			label: "Nahimova str",
+			label: "TL12",
 			value: "na",
 		},
 		{
-			label: "Chaikovskogo str",
+			label: "TL14",
 			value: "ch",
 		},
+		{
+			label: "TL20",
+			value: "ch",
+		},
+		{
+			label: "TM04",
+			value: "04",
+		},
+		{
+			label: "TM09",
+			value: "09",
+		},
+		{
+			label: "TM10",
+			value: "10",
+		},
+		{
+			label: "TM18",
+			value: "18",
+		}
 		],
 			value: ["all"],
 			multiple: true,
