--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -37,7 +37,7 @@
       text-align: left
       padding: 5px 10px
       margin: 10px
-      width: 150px
+      min-width: 150px
       background: #e1e1e1
       border-radius: 10px
       display: flex
