--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -16,9 +16,9 @@
 			<div class="closing-button" onclick="closeFindMenu()"><i class="material-icons close-pic">close</i></div>
 			<div class="find-a-route-content">
 				<h2>Find a route</h2>
-				<input onfocus="stopsAutoComplete()" class="find-a-route-inputs" type="text" placeholder="From" id="stopA" list="stopsA">
+				<input onkeydown="stopsAutoComplete()" class="find-a-route-inputs" type="text" placeholder="From" id="stopA" list="stopsA">
 				<datalist id="stopsA"></datalist>
-				<input onfocus="stopsAutoComplete()" class="find-a-route-inputs" type="text" placeholder="To" id="stopB" list="stopsB">
+				<input onkeydown="stopsAutoComplete()" class="find-a-route-inputs" type="text" placeholder="To" id="stopB" list="stopsB">
 				<datalist id="stopsB"></datalist>
 				<div class="time-interval">
 					<input type="time" name="from_time" value="06:00"/>
