--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -5,7 +5,7 @@
 		<div class="google-map">
 			<!-- Google Maps -->
 			<div id="map"></div>
-			<script type="text/javascript" src="/static-assets/js/google-map.js"></script>
+			<script type="text/javascript" src="/static-assets/js/google-map.js" async></script>
 			<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
 			</script>
@@ -32,11 +32,11 @@
 				<h2>Your route</h2>
 				<div class="closing-button" onclick="closeFoundRoutes()"><i class="material-icons close-pic">close</i></div>
 				<ul class="bar">
-					<li>13:00<a href="#"><i class="material-icons">place</i>Nevskiy pr</a></li>
+					<li>Time<a href="#"><i class="material-icons">place</i>Nevskiy pr</a></li>
 					<li><a href="#"><i class="material-icons">directions_bus</i>Some bus</a></li>
-					<li>13:45<a href="#"><i class="material-icons">place</i>Some stop</a></li>
+					<li>Time<a href="#"><i class="material-icons">place</i>Some stop</a></li>
 					<li><a href="#"><i class="material-icons">tram</i>Some tram</a></li>
-					<li>14:00<a href="#"><i class="material-icons">place</i>Bolshoy pr VO</a></li>
+					<li>Time<a href="#"><i class="material-icons">place</i>Bolshoy pr VO</a></li>
 				</ul>
 			</div>
 		</div>
