--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -17,18 +17,6 @@
 					</tr>
 				</table>
 			</div>
-				<div class="pagination-wrapper">
-					<div class="pagination">
-						<a href="#">&laquo;</a>
-						<a href="#" class="pagination--active">1</a>
-						<a href="#">2</a>
-						<a href="#">3</a>
-						<a href="#">4</a>
-						<a href="#">5</a>
-						<a href="#">6</a>
-						<a href="#">&raquo;</a>
-					</div>
-				</div>
 			<div class="card">
 				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
@@ -69,7 +57,7 @@
 					<div class="google-map-on-card">
 						<!-- Google Maps -->
 						<div id="map"></div>
-						<script type="text/javascript" src="/static-assets/js/google-map.js"></script>
+						<script type="text/javascript" src="/static-assets/js/google-map.js" async></script>
 						<script async defer
 						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
 						</script>
