--- a/dev-server/app/templates/partials/html/route_filtering_menu.hbs
+++ b/dev-server/app/templates/partials/html/route_filtering_menu.hbs
@@ -1,6 +1,4 @@
-<div class="select-wrapper">
-	<span class="autocomplete-select"></span>
-</div>
+<span class="autocomplete-select"></span>
 <script src="/static-assets/js/bundle.min.js"></script>
 <script>
 	var autocomplete = new SelectPure(".autocomplete-select", {
@@ -11,55 +9,55 @@
 		},
 		{
 			label: "AB01",
-			value: "mal",
+			value: "AB01",
 		},
 		{
 			label: "AB02",
-			value: "bol",
+			value: "AB02",
 		},
 		{
 			label: "AB03",
-			value: "ne",
+			value: "AB03",
 		},
 		{
 			label: "AB06",
-			value: "sr",
+			value: "AB06",
 		},
 		{
 			label: "TL07",
-			value: "lig",
+			value: "TL07",
 		},
 		{
 			label: "TL09",
-			value: "lit",
+			value: "TL09",
 		},
 		{
 			label: "TL12",
-			value: "na",
+			value: "TL12",
 		},
 		{
 			label: "TL14",
-			value: "ch",
+			value: "TL14",
 		},
 		{
 			label: "TL20",
-			value: "ch",
+			value: "TL20",
 		},
 		{
 			label: "TM04",
-			value: "04",
+			value: "TM04",
 		},
 		{
 			label: "TM09",
-			value: "09",
+			value: "TM09",
 		},
 		{
 			label: "TM10",
-			value: "10",
+			value: "TM10",
 		},
 		{
 			label: "TM18",
-			value: "18",
+			value: "TM18",
 		}
 		],
 			value: ["all"],
