--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -524,43 +524,22 @@ nav {
   background: #fbd2ce;
   border: 1px solid #ff9085;
   animation-name: shake;
-  animation-duration: 0.4s;
+  animation-duration: 0.8s;
   animation-timing-function: ease-in-out;
 }
 
 @keyframes shake {
-  0% {
-    transform: translate(1px, 1px) rotate(0deg);
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
   }
-  10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
   }
-  20% {
-    transform: translate(-3px, 0px) rotate(1deg);
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
   }
-  30% {
-    transform: translate(3px, 2px) rotate(0deg);
-  }
-  40% {
-    transform: translate(1px, -1px) rotate(1deg);
-  }
-  50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
-  }
-  60% {
-    transform: translate(-3px, 1px) rotate(0deg);
-  }
-  70% {
-    transform: translate(3px, 1px) rotate(-1deg);
-  }
-  80% {
-    transform: translate(-1px, -1px) rotate(1deg);
-  }
-  90% {
-    transform: translate(1px, 2px) rotate(0deg);
-  }
-  100% {
-    transform: translate(1px, -2px) rotate(-1deg);
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
   }
 }
 #login-button {
@@ -646,7 +625,7 @@ body {
 }
 
 @media (max-width: 450px) {
-  body {
+  body, .material-icons, .far, .fa {
     font-size: 4vw;
   }
 }
@@ -725,42 +704,41 @@ textarea {
   font: inherit;
 }
 
-.select-wrapper {
-  width: 90%;
-  margin: 0 10px;
+.filters {
+  max-width: 90%;
+}
+
+.multiselect-filtering--wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 .select-pure__select {
-  align-items: center;
   background: #f2f2f2;
   border-radius: 10px;
   border: 1px solid #ddd;
   color: #000;
   cursor: pointer;
   margin-bottom: 10px;
-  display: flex;
   font-size: 16px;
   font-weight: 500;
-  justify-content: left;
-  min-height: 44px;
-  padding: 5px 10px;
+  min-height: 34px;
+  min-width: 200px;
+  padding: 0 10px;
   transition: 0.2s;
-  width: 100%;
 }
 
 .select-pure__options {
-  border-radius: 4px;
+  border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
   color: #363b3e;
   display: none;
   left: 0;
-  max-height: 221px;
+  max-height: 200px;
   overflow-y: scroll;
   position: absolute;
   top: 50px;
-  width: 100%;
   z-index: 5;
 }
 
@@ -772,9 +750,12 @@ textarea {
   background: #fff;
   border-bottom: 1px solid #e4e4e4;
   box-sizing: border-box;
-  height: 44px;
   line-height: 25px;
-  padding: 10px;
+  padding: 5px 10px;
+}
+.select-pure__option:hover {
+  background: #29b8ed;
+  color: #fff;
 }
 
 .select-pure__option--selected {
@@ -821,7 +802,6 @@ textarea {
   font-size: 16px;
   outline: none;
   padding: 10px;
-  width: 100%;
 }
 
 main {
@@ -889,16 +869,10 @@ table th {
   text-align: left;
   background-color: #29b8ed;
   color: #fff;
+  vertical-align: middle;
 }
 table th:hover {
   background: #14afe9;
-}
-
-.filters {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .filtering-menu {
@@ -1018,6 +992,10 @@ table th:hover {
   background: #fff;
 }
 
+.table-editor-buttons {
+  padding: 0px 10px;
+  text-align: center;
+}
 .table-editor-buttons:hover {
   color: #29b8ed;
 }
