--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -246,32 +246,18 @@
     background: #fbd2ce
     border: 1px solid #ff9085
     animation-name: shake
-    animation-duration: 0.4s
+    animation-duration: 0.8s
     animation-timing-function: ease-in-out
 
 @keyframes shake
-  0%
-    transform: translate(1px, 1px) rotate(0deg)
-  10%
-    transform: translate(-1px, -2px) rotate(-1deg)
-  20%
-    transform: translate(-3px, 0px) rotate(1deg)
-  30%
-    transform: translate(3px, 2px) rotate(0deg)
-  40%
-    transform: translate(1px, -1px) rotate(1deg)
-  50%
-    transform: translate(-1px, 2px) rotate(-1deg)
-  60%
-    transform: translate(-3px, 1px) rotate(0deg)
-  70%
-    transform: translate(3px, 1px) rotate(-1deg)
-  80%
-    transform: translate(-1px, -1px) rotate(1deg)
-  90%
-    transform: translate(1px, 2px) rotate(0deg)
-  100%
-    transform: translate(1px, -2px) rotate(-1deg)
+  10%, 90%
+    transform: translate3d(-1px, 0, 0)
+  20%, 80%
+    transform: translate3d(2px, 0, 0)
+  30%, 50%, 70%
+    transform: translate3d(-4px, 0, 0)
+  40%, 60% 
+    transform: translate3d(4px, 0, 0)
 
 
 #login-button
