--- a/dev-server/app/static-assets/sass/_multiselect.sass
+++ b/dev-server/app/static-assets/sass/_multiselect.sass
@@ -1,37 +1,35 @@
-.select-wrapper
-  width: 90%
-  margin: 0 10px
+.filters
+  max-width: 90%
+  
+.multiselect-filtering--wrapper
+  display: flex
+  flex-direction: row
 
 .select-pure__select
-  align-items: center
   background: #f2f2f2
   border-radius: 10px
   border: 1px solid #ddd
   color: #000
   cursor: pointer
   margin-bottom: 10px
-  display: flex
   font-size: 16px
   font-weight: 500
-  justify-content: left
-  min-height: 44px
-  padding: 5px 10px
+  min-height: 34px
+  min-width: 200px
+  padding: 0 10px
   transition: 0.2s
-  width: 100%
 
 .select-pure__options
-  border-radius: 4px
+  border-radius: 10px
   border: 1px solid rgba(0, 0, 0, 0.15)
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04)
   box-sizing: border-box
   color: #363b3e
   display: none
   left: 0
-  max-height: 221px
+  max-height: 200px
   overflow-y: scroll
   position: absolute
   top: 50px
-  width: 100%
   z-index: 5
 
 .select-pure__select--opened .select-pure__options
@@ -41,9 +39,11 @@
   background: #fff
   border-bottom: 1px solid #e4e4e4
   box-sizing: border-box
-  height: 44px
   line-height: 25px
-  padding: 10px
+  padding: 5px 10px
+  &:hover
+    background: $main-color
+    color: #fff
 
 .select-pure__option--selected
   color: #e4e4e4
@@ -64,7 +64,6 @@
 
 .select-pure__selected-label:last-of-type
  margin-right: 0
-      
 
 .select-pure__selected-label i
   cursor: pointer
@@ -85,4 +84,3 @@
   font-size: 16px
   outline: none
   padding: 10px
-  width: 100%
