--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -7,7 +7,7 @@ body
   min-width: 300px
 
 @media (max-width: 450px)
-  body
+  body, .material-icons, .far, .fa
     font-size: 4vw
 
 .index-page-container
