--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -33,10 +33,6 @@
 						<a href="#">&laquo;</a>
 						<a href="#" class="pagination--active">1</a>
 						<a href="#">2</a>
-						<a href="#">3</a>
-						<a href="#">4</a>
-						<a href="#">5</a>
-						<a href="#">6</a>
 						<a href="#">&raquo;</a>
 					</div>
 				</div>
@@ -45,43 +41,19 @@
 				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Transport name</h3>
-				<div class="table-wrapper">
+				<div class="table-wrapper" id="transport-card--wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
 					<table id="transport-card">
 						<tr>
 							<th>Stop</th>
 							<th>Time</th>
 						</tr>
-						<tr>
-							<td>Maly pr. VO</td>
-							<td>12:00</td>
-						</tr>
-						<tr>
-							<td>Nevsky pr.</td>
-							<td>13:00</td>
-						</tr>
-						<tr>
-							<td>Bolshoy pr. VO</td>
-							<td>14:00</td>
-						</tr>
-						<tr>
-							<td>Sampsonievsky pr.</td>
-							<td>15:00</td>
-						</tr>
-						<tr>
-							<td>Nevsky pr.</td>
-							<td>16:00</td>
-						</tr>
-						<tr>
-							<td>Bolshoy pr. VO</td>
-							<td>17:00</td>
-						</tr>
 					</table>
 				</div>
 					<div class="google-map-on-card">
 						<!-- Google Maps -->
 						<div id="map"></div>
-						<script type="text/javascript" src="/static-assets/js/google-map.js"></script>
+						<script type="text/javascript" src="/static-assets/js/google-map.js" async></script>
 						<script async defer
 						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
 						</script>
