--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -21,7 +21,7 @@
 				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Stop name</h3>
-				<div class="table-wrapper">
+				<div class="table-wrapper" id="stop-card--wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
 					<table>
 						<tr>
