Automatically route cards generating

--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -17,7 +17,7 @@
 				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Route name</h3>
-				<div class="table-wrapper">
+				<div class="table-wrapper" id="route-card--wrapper">
 					<div class="table-open-editor-tools-button" onclick="editTable(this)"><i class="material-icons">settings</i></div>
 					<table>
 						<tr>
@@ -26,26 +26,6 @@
 						</tr>
 						<tr>
 							<td>Maly pr. VO</td>
-							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-						</tr>
-						<tr>
-							<td>Nevsky pr.</td>
-							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-						</tr>
-						<tr>
-							<td>Bolshoy pr. VO</td>
-							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-						</tr>
-						<tr>
-							<td>Sampsonievsky pr.</td>
-							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-						</tr>
-						<tr>
-							<td>Nevsky pr.</td>
-							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
-						</tr>
-						<tr>
-							<td>Bolshoy pr. VO</td>
 							<td>12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00</td>
 						</tr>
 					</table>
