--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -276,6 +276,7 @@ nav {
   padding: 5px 10px;
   margin: 10px;
   min-width: 150px;
+  width: 100%;
   background: #e1e1e1;
   border-radius: 10px;
   display: flex;
