--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -38,6 +38,7 @@
       padding: 5px 10px
       margin: 10px
       min-width: 150px
+      width: 100%
       background: #e1e1e1
       border-radius: 10px
       display: flex
