--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -46,6 +46,8 @@
       align-items: center
       &:hover
         background: darken(#eee,10%)
+  p
+    font-size: 1.3em
 
 @media (max-width: 500px)
   .found-route-menu
