--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -32,6 +32,7 @@
 			<div class="found-route-content-wrapper">
 				<h2>Your route</h2>
 				<div class="closing-button" onclick="closeFoundRoutes()"><i class="material-icons close-pic">close</i></div>
+				<p>Nothing has been found</p>
 				<ul class="bar" id="route-list">
 				</ul>
 			</div>
