--- a/dev-server/app/templates/partials/html/header_menus.hbs
+++ b/dev-server/app/templates/partials/html/header_menus.hbs
@@ -2,11 +2,8 @@
 	<div class="closing-button" onclick="closeFavorites()"><i class="material-icons close-pic">close</i></div>
 	<div class="edit-button" onclick="editFavorites()"><i class="material-icons">more_vert</i></div>
 	<h3>Favorites</h3>
-	<ul>
+	<ul id="favorites-list">
 		<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="material-icons">train</i>Train 102</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="material-icons">tram</i>Tram 59</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="material-icons">place</i>Maly V.O.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 		<li><a href="#"><i class="material-icons">place</i>Nevsky pr.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 	</ul>
 </div>
