--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -202,6 +202,10 @@
     &:hover
       background: darken(#eee,10%)
 
+.fixed-favorites
+  position: fixed
+  top: 120px
+
 .delete-button
   display: none
   &:hover
