--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -18,7 +18,7 @@
 				</table>
 			</div>
 			<div class="card">
-				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
+				<div class="bookmark-button" onclick="addToFavorites(this)" wfd-id="102"><i class="far fa-bookmark"></i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Stop name</h3>
 				<div class="table-wrapper" id="stop-card--wrapper">
