--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -38,7 +38,7 @@ nav
   font-size: 1.3em
   margin: 0 10px
   &:hover
-    text-decoration: underline
+    color: $main-color
 
 .header-buttons
   display: flex
