--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -132,23 +132,7 @@
   &:focus
     background: #fff
 
-.time-interval
-    width: 100%
-    margin: 10px 0
-    display: flex
-    flex-direction: row
-    justify-content: space-between
-    &>input
-      border-radius: 10px
-      padding: 5px 10px
-      background: #ddd
-      color: #000
-      font-family: $main-font
-      font-size: 1em
-      &:focus
-        background: #fff
-
-#find-a-route-button
+.button
   font-size: 1.3em
   border: 1px solid $main-color
   background: lighten($main-color,35%)
@@ -201,6 +185,10 @@
     border-radius: 10px
     &:hover
       background: darken(#eee,10%)
+
+.fixed-favorites
+  position: fixed
+  top: 120px
 
 .delete-button
   display: none
@@ -261,19 +249,6 @@
     transform: translate3d(-4px, 0, 0)
   40%, 60% 
     transform: translate3d(4px, 0, 0)
-
-
-#login-button
-  font-size: 1.3em
-  border: 1px solid $main-color
-  background: lighten($main-color,35%)
-  border-radius: 20px
-  padding: 5px
-  margin-top: 5px
-  width: 60%
-  text-align: center
-  &:hover
-    background: lighten($main-color,20%)
 
 .show-additional-menu
   opacity: 1
