--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -23,7 +23,7 @@
 						<!-- /Google Maps -->
 					</div>
 			<div class="card">
-				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
+				<div class="bookmark-button" onclick="addToFavorites(this)" wfd-id="102"><i class="material-icons">bookmark_border</i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Route name</h3>
 				<div class="table-wrapper" id="route-card--wrapper">
