--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -38,7 +38,7 @@
 				</div>
 				
 			<div class="card">
-				<div class="bookmark-button" onclick="" wfd-id="102"><i class="far fa-bookmark"></i></div>
+				<div class="bookmark-button" onclick="addToFavorites(this)" wfd-id="102"><i class="material-icons">bookmark_border</i></div>
 				<div class="closing-button" onclick="closeCard(this)"><i class="material-icons close-pic">close</i></div>
 				<h3>Transport name</h3>
 				<div class="table-wrapper" id="transport-card--wrapper">
