--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -31,7 +31,7 @@
 						<div id="map"></div>
 						<script type="text/javascript" src="/static-assets/js/google-map.js" async></script>
 						<script async defer
-						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc">
 						</script>
 						<!-- /Google Maps -->
 					</div>
