--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -13,7 +13,7 @@
 			<!-- /Google Maps -->
 		</div>
 		<div class="find-a-route-menu">
-			<div class="route-wrapped-ico" onclick="closeFindMenu()"><i class="fas fa-route"></i></div>
+			<div class="route-wrapped-ico" onclick="openFindMenu()"><i class="fas fa-route"></i></div>
 			<div class="closing-button" onclick="closeFindMenu()"><i class="material-icons close-pic">close</i></div>
 			<div class="find-a-route-content">
 				<h2>Find a route</h2>
