--- a/dev-server/app/templates/partials/html/header_menus.hbs
+++ b/dev-server/app/templates/partials/html/header_menus.hbs
@@ -3,8 +3,10 @@
 	<div class="edit-button" onclick="editFavorites()"><i class="material-icons">more_vert</i></div>
 	<h3>Favorites</h3>
 	<ul id="favorites-list">
-		<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">directions_bus</i>Bus AB01</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 		<li><a href="#"><i class="material-icons">place</i>Nevsky pr.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">tram</i>Tram TL09</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">place</i>Gorkovskaya</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 	</ul>
 </div>
 <div class="login-menu">
