--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -49,11 +49,6 @@
   p
     font-size: 1.3em
 
-@media (max-width: 500px)
-  .found-route-menu
-    left: 0
-    width: 95%
-
 .found-route-content-wrapper
   display: flex
   flex-direction: column
@@ -191,7 +186,7 @@
   top: 120px
 
 .delete-button
-  display: none
+  visibility: hidden
   &:hover
     color: $main-color
     cursor: pointer
