--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -48,13 +48,13 @@ table
     padding: 5px
     text-align: left
     vertical-align: middle
-    cursor: pointer
+    &>a:hover, i:hover
+      cursor: pointer
+      color: $main-color
   tr:nth-child(even)
     background-color: #f2f2f2
   tr
     background-color: #f8f8f8
-  td:hover
-    color: $main-color
   th
     padding-top: 12px
     padding-bottom: 12px
@@ -87,6 +87,8 @@ table
       font-size: 20px
 
 %filtering-item
+  color: #fff
+  font-weight: 600
   padding: 5px 10px
   font-size: 1.3em
   transition: all 0.2s
@@ -142,6 +144,7 @@ table
   z-index: 2
   &:hover
     color: $main-color
+    cursor: pointer
   i
     font-size: 1.8em
 
@@ -158,9 +161,6 @@ table
 .show-card
   opacity: 1
   display: flex
-
-.table-edit-td:hover
-  color: #000
 
 .table-edit-input
   background: #eee
