--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -21,8 +21,19 @@ footer
   width: 100%
   padding: 20px
   display: flex
-  justify-content: center
+  flex-direction: row
+  color: #000
+  align-items: baseline
+  justify-content: space-between
+  font-size: 1.1em
 
 .copyright
-  color: #000
-  font-size: 20px
+  flex: 1
+  text-align: center
+
+.author
+  flex: 1
+
+.company
+  flex: 1
+  text-align: right
