--- a/dev-server/app/templates/partials/html/footer.hbs
+++ b/dev-server/app/templates/partials/html/footer.hbs
@@ -1,5 +1,7 @@
 		{{> html/header_menus }}
 	</main>
     <footer>
+        <div class="author">Created by Yaroslav Bezruchko</div>
         <div class="copyright">© 2018 T-port</div>
+        <div class="company">T-systems</div>
     </footer>
