--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -230,6 +230,49 @@ nav {
   right: 16px;
 }
 
+.global-search-results {
+  display: none;
+  position: absolute;
+  top: 52px;
+  flex-direction: column;
+  right: 0;
+  max-height: 149px;
+  overflow: overlay;
+  width: 250px;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  background: #fff;
+  border: 1px solid #29b8ed;
+  border-radius: 10px;
+}
+.global-search-results li {
+  width: 100%;
+  display: flex;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+}
+.global-search-results li:hover {
+  background: #eee;
+  cursor: pointer;
+}
+.global-search-results li:first-child {
+  border-radius: 10px 10px 0 0;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
 .google-map {
   width: 100%;
   height: 100%;
@@ -611,12 +654,25 @@ footer {
   width: 100%;
   padding: 20px;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  color: #000;
+  align-items: baseline;
+  justify-content: space-between;
+  font-size: 1.1em;
 }
 
 .copyright {
-  color: #000;
-  font-size: 20px;
+  flex: 1;
+  text-align: center;
+}
+
+.author {
+  flex: 1;
+}
+
+.company {
+  flex: 1;
+  text-align: right;
 }
 
 * {
